[package]
name = "webshade"
version = "0.1.0"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.8"
winit = "0.23.0"
futures = "0.3.5"
shaderc = "0.6.2"
bytemuck = "1.4.1"
log = "0.4.11"
env_logger = "0.7.1"
anyhow = "1.0"
ultraviolet = "0.7.1"
tobj = "2.0.2"
gif = "0.11.1"

[dependencies.wgpu]
version = "0.6.0"
features = ["vulkan-portability"]

[build-dependencies]
fs_extra = "1.2.0"
anyhow = "1.0"
glob = "0.3"
shaderc = "0.6"

[profile.dev.package.'*']
opt-level = 3

[[example]]
name = "gif"
path = "examples/gif/src/main.rs"

[[example]]
name = "image"
path = "examples/image/src/main.rs"
